Addressing most of Pranish's comments

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Local" : "mongodb://localhost:27017"
+  "ConnectionString": {
+    "MongoDb": "mongodb://localhost:27017"
   }
 }
