Properly set up S3 bucket, need to correctly implement secrets.json for credentials

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionString": {
     "MongoDb": "mongodb://localhost:27017"
+  },
+  "AmazonS3Credentials": {
+    "AccessKey": "",
+    "SecretKey":  ""
   }
 }
