Refactored backend with validators, updated services and models

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -11,6 +11,11 @@
   },
   "AmazonS3Credentials": {
     "AccessKey": "",
-    "SecretKey":  ""
+    "SecretKey": ""
+  },
+  "UserModel": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Collection": "user",
+    "Index":  "email"
   }
 }
