--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -10,12 +10,12 @@
     "MongoDb": "mongodb://localhost:27017"
   },
   "AmazonS3Credentials": {
-    "AccessKey": "",
-    "SecretKey": ""
+    "AccessKey": "AKIAXUOXAWA7UB7M4Z6C",
+    "SecretKey": "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"
   },
   "UserModel": {
     "ConnectionString": "mongodb://localhost:27017",
-    "Collection": "user",
-    "Index":  "email"
+    "Collection": "users",
+    "Index":  "Email"
   }
 }
