--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -10,8 +10,8 @@
     "MongoDb": "mongodb://localhost:27017"
   },
   "AmazonS3Credentials": {
-    "AccessKey": "AKIAXUOXAWA7UB7M4Z6C",
-    "SecretKey": "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"
+    "AccessKey": ,
+    "SecretKey":
   },
   "UserModel": {
     "ConnectionString": "mongodb://localhost:27017",
