authcontroller and service created

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -10,12 +10,20 @@
     "MongoDb": "mongodb://localhost:27017"
   },
   "AmazonS3Credentials": {
-    "AccessKey": ,
-    "SecretKey":
+    "AccessKey": "",
+    "SecretKey": ""
   },
   "UserModel": {
     "ConnectionString": "mongodb://localhost:27017",
     "Collection": "users",
-    "Index":  "Email"
+    "Index": "Email"
+  },
+  "Jwt": {
+    "Key": "123"
+  },
+  "Hash": {
+    "Iterations": 1000,
+    "SaltSize": 16,
+    "KeySize":  32
   }
 }
