authentication framework built

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -19,11 +19,11 @@
     "Index": "Email"
   },
   "Jwt": {
-    "Key": "123"
+    "Key": "this is my custom Secret key for authentication"
   },
   "Hash": {
     "Iterations": 1000,
-    "SaltSize": 16,
-    "KeySize":  32
+    "SaltSize": 32,
+    "KeySize":  128
   }
 }
