photo and reels aws addition

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -10,8 +10,8 @@
     "MongoDb": "mongodb://localhost:27017"
   },
   "AmazonS3Credentials": {
-    "AccessKey": "",
-    "SecretKey": ""
+    "AccessKey": "123",
+    "SecretKey": "123"
   },
   "UserModel": {
     "ConnectionString": "mongodb://localhost:27017",
