new content model and endpoints

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -18,6 +18,11 @@
     "Collection": "users",
     "Index": "Email"
   },
+  "ContentModel": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Collection": "contents",
+    "Index":  "Id"
+  },
   "Jwt": {
     "Key": "this is my custom Secret key for authentication"
   },
