--- a/frontend/landing-page/package.json
+++ b/frontend/landing-page/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
+    "dayjs": "^1.11.8",
     "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
