--- a/frontend/landing-page/package.json
+++ b/frontend/landing-page/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
     "dayjs": "^1.11.8",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
