initial email service setup with amazon SES

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -29,6 +29,13 @@
   "Hash": {
     "Iterations": 1000,
     "SaltSize": 32,
-    "KeySize":  128
+    "KeySize": 128
+  },
+  "AmazonSES": {
+    "Email":  "",
+    "Host": "",
+    "Port": 587,
+    "UserName": "",
+    "Password": ""
   }
 }
