--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -9,9 +9,15 @@
   "ConnectionString": {
     "MongoDb": "mongodb://localhost:27017"
   },
-  "AmazonS3Credentials": {
-    "AccessKey": "123",
-    "SecretKey": "123"
+  "AmazonCredentials": {
+    "S3": {
+      "AccessKey": "123",
+      "SecretKey": "123"
+    },
+    "SES": {
+      "AccessKey": "124",
+      "SecretKey": "124"
+    }
   },
   "UserModel": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -32,7 +38,7 @@
     "KeySize": 128
   },
   "AmazonSES": {
-    "Email":  "",
+    "Email": "",
     "Host": "",
     "Port": 587,
     "UserName": "",
