removed unnecessary model

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -15,8 +15,8 @@
       "SecretKey": "123"
     },
     "SES": {
-      "AccessKey": "124",
-      "SecretKey": "124"
+      "AccessKey": "",
+      "SecretKey": ""
     }
   },
   "UserModel": {
@@ -36,12 +36,5 @@
     "Iterations": 1000,
     "SaltSize": 32,
     "KeySize": 128
-  },
-  "AmazonSES": {
-    "Email": "",
-    "Host": "",
-    "Port": 587,
-    "UserName": "",
-    "Password": ""
   }
 }
