verification added with redirect from landing-page to main

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -11,8 +11,8 @@
   },
   "AmazonCredentials": {
     "S3": {
-      "AccessKey": "123",
-      "SecretKey": "123"
+      "AccessKey": "",
+      "SecretKey": ""
     },
     "SES": {
       "AccessKey": "",
