nswag ts client migration

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -11,8 +11,8 @@
   },
   "AmazonCredentials": {
     "S3": {
-      "AccessKey": "",
-      "SecretKey": ""
+      "AccessKey": "123",
+      "SecretKey": "123"
     },
     "SES": {
       "AccessKey": "",
