Comment Service Created

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -27,7 +27,12 @@
   "ContentModel": {
     "ConnectionString": "mongodb://localhost:27017",
     "Collection": "contents",
-    "Index":  "Id"
+    "Index": "Id"
+  },
+  "CommentModel": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Collection": "comments",
+    "Index": "Id"
   },
   "Jwt": {
     "Key": "this is my custom Secret key for authentication"
