--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
+    "tss-react": "^4.9.3",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
