--- a/backend/Backend.csproj
+++ b/backend/Backend.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.100.153" />
     <PackageReference Include="FluentValidation" Version="11.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
