--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@microsoft/signalr": "^8.0.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.148",
     "@mui/material": "^5.13.3",
