feat: notification service created with database collection

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -34,6 +34,11 @@
     "Collection": "comments",
     "Index": "Id"
   },
+  "NotificationModel": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Collection": "notifications",
+    "Index":  "Id"
+  },
   "Jwt": {
     "Key": "this is my custom Secret key for authentication"
   },
