feat: added networks to docker-compose file

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "MongoDb": "mongodb://localhost:27017"
+    "MongoDb": "mongodb://mongo:27017"
   },
   "AmazonCredentials": {
     "S3": {
@@ -20,22 +20,22 @@
     }
   },
   "UserModel": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo:27017",
     "Collection": "users",
     "Index": "Email"
   },
   "ContentModel": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo:27017",
     "Collection": "contents",
     "Index": "Id"
   },
   "CommentModel": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo:27017",
     "Collection": "comments",
     "Index": "Id"
   },
   "NotificationModel": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo:27017",
     "Collection": "notifications",
     "Index":  "Id"
   },
