feat: volume added to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ services:
   backend:
     build: ./backend
     ports:
-      - 80:80
-      - 443:443
+      - 80
+      - 443
+    environment:
+      - ASPNETCORE_URLS=http://+:80
     depends_on:
       - mongo
     networks:
@@ -23,6 +25,10 @@ services:
       - 27017:27017
     networks:
       - ic_app
+    volumes:
+      - mongo_data_container:/data/db
 networks:
   ic_app:
     driver: bridge
+volumes:
+  mongo_data_container:
