--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   backend:
     build: ./backend
     ports:
-      - 80
-      - 443
+      - 80:80
+      - 443:443
     environment:
       - ASPNETCORE_URLS=http://+:80
     depends_on:
@@ -15,6 +15,8 @@ services:
     build: ./frontend/main
     ports:
       - 3000:3000
+    environment:
+      - REACT_APP_API_URL=http://localhost:80
     networks:
       - ic_app
   mongo:
